# backend

./: .dockerignore  .gitignore  Dockerfile  manage.py  pyproject.toml  run.sh  uvicorn_entry.py
docker/: Dockerfile
practicode_backend/: asgi.py  handle_bridge.py  handle_run.py  settings.py  test_cases.py  urls.py  views.py  websocket.py  workers.py  wsgi.py
practicode_backend/templates/tasks/: cpp-condition-variable-1.html  cpp-condition-variable-1.tests.json  cpp-example-task-1.html  default.tests.json  golang-example-task-1.html
