[tool.poetry]
name = "practicode-backend"
version = "0.1.0"
description = ""
authors = ["Alexander Garustovich <yukigaru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
django-cors-headers = "^3.7.0"
pybase64 = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
